# python-voice

./: .gitmodules  README.md  docker-compose.yml
docker/python/: Dockerfile
src/: main.py  pyproject.toml
