[tool.poetry]
name = "catVoice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
pandas = "^1.0.3"
librosa = "^0.7.2"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
